--- a/user_gudang/profile_kehadiran.html
+++ b/user_gudang/profile_kehadiran.html
@@ -388,8 +388,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
-												<a class="kt-margin-l-5" href="user_gudang/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-sm btn-outline-success"><i class="flaticon2-list-3"></i> List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
+												<button type="button" class="btn btn-md btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
+												<a class="kt-margin-l-5" href="user_gudang/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-md btn-outline-success"><i class="flaticon2-list-3"></i> List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
