--- a/user_gudang/stock_total.html
+++ b/user_gudang/stock_total.html
@@ -231,7 +231,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<h3 class="kt-head__title">
 												User Notifications
 												&nbsp;
-												<span class="btn btn-success btn-sm btn-bold btn-font-md">23 new</span>
+												<span class="btn btn-success btn-md btn-bold btn-font-md">23 new</span>
 											</h3>
 										</div>
 
