--- a/user_admin/listTreatment_detail_done_edited.html
+++ b/user_admin/listTreatment_detail_done_edited.html
@@ -682,7 +682,14 @@ License: You must have a valid license purchased only from themeforest(the above
 	            submitHandler: function(form) {
 	                //form[0].submit(); // submit the form
 	            }
-        	});
+			});
+			
+			// Datatable responsiveness x Bootstrap tab bug
+			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+		        $($.fn.dataTable.tables(true)).DataTable()
+		           .columns.adjust()
+		           .responsive.recalc();
+		    });
 		</script>
 
 		<!--end::Page Scripts -->
