--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -666,6 +666,13 @@ License: You must have a valid license purchased only from themeforest(the above
 				   confirmButtonClass: "btn btn-brand"
 			   });
 		   });
+
+		   // Datatable responsiveness x Bootstrap tab bug
+			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+		        $($.fn.dataTable.tables(true)).DataTable()
+		           .columns.adjust()
+		           .responsive.recalc();
+		    });
 		</script>
 
 		<!--end::Page Scripts -->
