--- a/user_gudang/md_barang.html
+++ b/user_gudang/md_barang.html
@@ -327,7 +327,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_data_barang_tambah"><i class="flaticon-plus" style="color: white;"></i> Tambah Barang</button>
+												<button type="button" class="btn btn-md btn-success" data-toggle="modal" data-target="#kt_modal_data_barang_tambah"><i class="flaticon-plus" style="color: white;"></i> Tambah Barang</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
@@ -422,6 +422,93 @@ License: You must have a valid license purchased only from themeforest(the above
 											<div class="modal-footer" style="justify-content:center;">
 												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
 												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+
+							<div class="modal fade" id="kt_modal_data_barang_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">Edit Barang</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											</button>
+										</div>
+										<form id="kt_form_data_barang_edit">
+											<div class="modal-body">
+												<div class="form-group row">
+													<label class="col-sm-4 col-form-label">Nama Barang :</label>
+													<div class="col-sm-8">
+														<input type="text" class="form-control" name="data_barang_nama_edit" placeholder="Nama" value="Eyelash">
+													</div>
+												</div>
+												<div class="form-group row">
+													<label class="col-sm-4 col-form-label">Satuan Kecil :</label>
+													<div class="col-sm-8">
+                                                        <select class="form-control" name="data_barang_satuan_kecil_edit">
+    														<option value="" disabled>Satuan Kecil</option>
+    														<option selected>Pcs</option>
+    														<option>Pcs</option>
+    														<option>Pcs</option>
+    													</select>
+													</div>
+												</div>
+												<div class="form-group row kt-margin-b-5">
+													<label class="col-sm-4 col-form-label">Satuan Sedang :</label>
+													<div class="col-sm-8">
+                                                        <select class="form-control" name="data_barang_satuan_sedang_edit">
+    														<option value="" disabled>Satuan Sedang</option>
+    														<option selected>Pack</option>
+    														<option>Pack</option>
+    														<option>Pack</option>
+    													</select>
+													</div>
+												</div>
+												<div class="form-group row">
+													<div class="col-sm-8 offset-sm-4">
+														<div class="input-group">
+															<input type="number" min="1" class="form-control input-group-child-normal kt-margin-r-5" name="data_barang_satuan_sedang_jumlah_edit" placeholder="Jumlah" value="3">
+															<span class="input-group-text" name="data_barang_satuan_sedang_kecil_edit">Pcs</span>
+														</div>
+														<span class="form-text text-muted">1 Satuan Sedang = X Satuan Kecil</span>
+													</div>
+												</div>
+												<div class="form-group row kt-margin-b-5">
+													<label class="col-sm-4 col-form-label">Satuan Besar :</label>
+													<div class="col-sm-8">
+                                                        <select class="form-control" name="data_barang_satuan_besar_edit">
+    														<option value="" disabled>Satuan Besar</option>
+    														<option selected>Box</option>
+    														<option>Box</option>
+    														<option>Box</option>
+    													</select>
+													</div>
+												</div>
+												<div class="form-group row">
+													<div class="col-sm-8 offset-sm-4">
+														<div class="input-group">
+															<input type="number" min="1" class="form-control input-group-child-normal kt-margin-r-5" name="data_barang_satuan_besar_jumlah_edit" placeholder="Jumlah" value="10">
+															<span class="input-group-text" name="data_barang_satuan_besar_sedang_edit">Pack</span>
+														</div>
+														<span class="form-text text-muted">1 Satuan Besar = X Satuan Sedang</span>
+													</div>
+												</div>
+												<div class="form-group row">
+													<label class="col-sm-4 col-form-label">Tipe :</label>
+													<div class="col-sm-8">
+                                                        <select class="form-control" name="data_barang_tipe_edit">
+    														<option value="" disabled>Tipe Barang</option>
+    														<option selected>Alat</option>
+    														<option>Bahan</option>
+    													</select>
+													</div>
+												</div>
+											</div>
+											<div class="modal-footer" style="justify-content:center;">
+												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
+												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_edit">Submit</button>
 											</div>
 										</form>
 									</div>
@@ -539,6 +626,18 @@ License: You must have a valid license purchased only from themeforest(the above
 				});
 			});
 
+			$('#kt_sweetalert_berhasil_edit').click(function(e) {
+				swal.fire({
+					title: "Berhasil",
+					text: "Data berhasil diubah.",
+					type: "success",
+					confirmButtonText: "Ok",
+					confirmButtonClass: "btn btn-brand"
+				}).then(function(result) {
+					// location.reload();
+				});
+			});
+
 			// Form Validation
 			$('#kt_form_data_barang_tambah').validate({
 				rules : {
@@ -563,6 +662,34 @@ License: You must have a valid license purchased only from themeforest(the above
 						digits: true
 					},
 					data_barang_tipe : {
+						required: true
+					}
+				}
+			});
+
+			$('#kt_form_data_barang_edit').validate({
+				rules : {
+					data_barang_nama_edit : {
+						required: true
+					},
+					data_barang_satuan_kecil_edit : {
+						required: true
+					},
+					data_barang_satuan_sedang_edit : {
+						required: true
+					},
+					data_barang_satuan_besar_edit : {
+						required: true
+					},
+					data_barang_satuan_sedang_jumlah_edit : {
+						required: true,
+						digits: true
+					},
+					data_barang_satuan_besar_jumlah_edit : {
+						required: true,
+						digits: true
+					},
+					data_barang_tipe_edit : {
 						required: true
 					}
 				}
