--- a/user_supervisor_studio/finance_pengeluaran.html
+++ b/user_supervisor_studio/finance_pengeluaran.html
@@ -363,7 +363,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_tambah_pengeluaran"><i class="flaticon2-add"></i> Tambah Pengeluaran</button>
+												<button type="button" class="btn btn-md btn-success" data-toggle="modal" data-target="#kt_modal_tambah_pengeluaran"><i class="flaticon2-add"></i> Tambah Pengeluaran</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
