--- a/user_supervisor_studio/finance_pengeluaran_detail.html
+++ b/user_supervisor_studio/finance_pengeluaran_detail.html
@@ -363,7 +363,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
-												<a href="user_supervisor_studio/finance_pengeluaran_detail_edit.html" class="btn btn-outline-success toolbar-absolute"><i class="la la-edit"></i> Edit</a>
+												<a href="user_supervisor_studio/finance_pengeluaran_detail_edit.html" class="btn btn-outline-success toolbar-absolute kt-hidden"><i class="la la-edit"></i> Edit</a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
