--- a/user_admin/finance_pemasukan.html
+++ b/user_admin/finance_pemasukan.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Payroll | Admin Fabulash</title>
+		<title>Pemasukan | Admin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"> -->
 		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
@@ -80,7 +81,8 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
 							<a href="user_admin/index.html">
-								<h4 class="aside-logo">FABULASH</h4>
+								<!-- <img alt="Logo" src="assets/media/company-logos/logo_invoice_dark.png" /> -->
+								<h4  alt="Logo" class="aside-logo">FABULASH</h4>
 							</a>
 						</div>
 						<div class="kt-aside__brand-tools">
@@ -162,7 +164,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <path d="M10.3144829,18.7082217 C8.08859955,17.8189707 5.31710038,17.2495635 1.99998542,17 C1.99998542,16.9325178 1.99998542,13.1012863 1.99998542,5.50630526 L2.00000925,5.50630526 C2.00000925,5.23017604 2.22385621,5.00632908 2.49998542,5.00632908 C2.50420375,5.00632908 2.5084219,5.00638247 2.51263888,5.00648922 C5.34175439,5.07811173 8.17086991,5.74261533 10.9999854,7 C10.9999854,7.04449645 10.9999854,10.79246 10.9999854,18.2438906 L11,18.2438906 C11,18.520041 10.7761358,18.7439052 10.4999854,18.7439052 C10.4364457,18.7439052 10.3734882,18.7317946 10.3144829,18.7082217 Z" fill="#000000" opacity="0.3"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Library</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect id="bound" x="0" y="0" width="24" height="24"></rect>
 								        <rect id="Rectangle-62-Copy" fill="#000000" opacity="0.3" x="12" y="4" width="3" height="13" rx="1.5"></rect>
@@ -173,12 +175,12 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Finance</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_admin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -189,7 +191,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
-											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_admin/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -303,20 +305,20 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 
 					<!-- end:: Header -->
-					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
+						<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
 						<!-- begin:: Content Head -->
 						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Profile </h3>
+										Finance </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_admin/profile_payroll.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_supervisor_studio/finance_pemasukan.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_admin/profile_payroll.html" class="kt-subheader__breadcrumbs-link">
-											Payroll </a>
+										<a href="user_supervisor_studio/finance_pemasukan.html" class="kt-subheader__breadcrumbs-link">
+											Pemasukan </a>
 									</div>
 								</div>
 							</div>
@@ -325,7 +327,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-                        <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
                             <div class="row row-centered">
 
@@ -336,26 +338,47 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
 												<span class="kt-portlet__head-icon">
-													<i class="flaticon2-cube-1"></i>
+													<i class="flaticon2-graph"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Payroll
+													Pemasukan
 												</h3>
-											</div>
-                                            <div class="kt-portlet__head-toolbar">
-												<a href="user_admin/profile_payroll_pinjaman.html"><button type="button" class="btn btn-md btn-success"><i class="flaticon2-list-3"></i> Pinjaman <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-bordered table-hover table-checkable" id="table_payroll"></table>
+											<form class="kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_finance_pemasukan"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_finance_pemasukan">
+													</div>
+    											</div>
+    										</form>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_finance_pemasukan"></table>
+										</div>
+										<div class="kt-portlet__foot kt-hidden">
+											<div class="row">
+												<div class="col-lg-6">
+													Portlet footer:
+												</div>
+												<div class="col-lg-6">
+													<button type="submit" class="btn btn-primary">Submit</button>
+													<span class="kt-margin-left-10">or <a href="#" class="kt-link kt-font-bold">Cancel</a></span>
+												</div>
+											</div>
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
-
 							</div>
-
 						</div>
 
 						<!-- end:: Content -->
@@ -426,13 +449,58 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Vendors(used by this page) -->
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
-
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
         <script src="assets/js/script/datatable_admin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
+		<script>
+		   // Form Validation
+		   $("#kt_form_pengeluaran").validate({
+			   // define validation rules
+			   rules: {
+				   pengeluaran_kategori : {
+					   required: true
+				   },
+				   pengeluaran_nama : {
+					   required: true
+				   },
+				   pengeluaran_jumlah : {
+					   required: true
+				   },
+				   pengeluaran_harga : {
+					   required: true
+				   },
+				   pengeluaran_penerima : {
+					   required: true
+				   },
+				   pengeluaran_jenis_pembayaran : {
+					   required: true
+				   }
+			   },
+
+			   invalidHandler: function(event, validator) {
+				   KTUtil.scrollTop();
+			   },
+			   submitHandler: function(form) {
+				   //form[0].submit(); // submit the form
+			   }
+		   });
+
+		   // Sweetalert
+		   $('#kt_sweetalert_berhasil_modal').click(function(e) {
+			   swal.fire({
+				   title: "Berhasil",
+				   text: "Pengeluaran berhasil ditambahkan",
+				   type: "success",
+				   confirmButtonText: "Ok",
+				   confirmButtonClass: "btn btn-brand"
+			   }).then(function(result) {
+				   // location.reload();
+			   });
+		   });
+		</script>
 		<!--end::Page Scripts -->
 	</body>
 
