--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <!--
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 & Angular 8
 Author: KeenThemes
@@ -13,7 +12,6 @@ Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-t
 License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
 -->
 <html lang="en">
-
 	<!-- begin::Head -->
 	<head>
 		<base href="../">
@@ -21,41 +19,29 @@ License: You must have a valid license purchased only from themeforest(the above
 		<title>Detail Treatment | Admin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 		<!--begin::Fonts -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
-
 		<!--end::Fonts -->
-
 		<!--begin::Page Vendors Styles(used by this page) -->
 		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
-
 		<!--end::Page Vendors Styles -->
-
 		<!--begin::Global Theme Styles(used by all pages) -->
 		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-
 		<!--end::Global Theme Styles -->
-
 		<!--begin::Layout Skins(used by all pages) -->
 		<link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style/fabulash.css" rel="stylesheet" type="text/css" />
-
 		<!--end::Layout Skins -->
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 	</head>
-
 	<!-- end::Head -->
-
 	<!-- begin::Body -->
 	<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
-
 		<!-- begin:: Page -->
-
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
@@ -68,14 +54,11 @@ License: You must have a valid license purchased only from themeforest(the above
 				<button class="kt-header-mobile__topbar-toggler" id="kt_header_mobile_topbar_toggler"><i class="flaticon-more"></i></button>
 			</div>
 		</div>
-
 		<!-- end:: Header Mobile -->
 		<div class="kt-grid kt-grid--hor kt-grid--root">
 			<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--ver kt-page">
-
 				<!-- begin:: Aside -->
 				<div class="kt-aside  kt-aside--fixed  kt-grid__item kt-grid kt-grid--desktop kt-grid--hor-desktop" id="kt_aside">
-
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
@@ -102,9 +85,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							</button>
 						</div>
 					</div>
-
 					<!-- end:: Aside -->
-
 					<!-- begin:: Aside Menu -->
 					<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper">
 						<div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1" data-ktmenu-dropdown-timeout="500">
@@ -164,6 +145,22 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Library</span></a></li>
 								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								        <rect id="bound" x="0" y="0" width="24" height="24"></rect>
+								        <rect id="Rectangle-62-Copy" fill="#000000" opacity="0.3" x="12" y="4" width="3" height="13" rx="1.5"></rect>
+								        <rect id="Rectangle-62-Copy-2" fill="#000000" opacity="0.3" x="7" y="9" width="3" height="8" rx="1.5"></rect>
+								        <path d="M5,19 L20,19 C20.5522847,19 21,19.4477153 21,20 C21,20.5522847 20.5522847,21 20,21 L4,21 C3.44771525,21 3,20.5522847 3,20 L3,4 C3,3.44771525 3.44771525,3 4,3 C4.55228475,3 5,3.44771525 5,4 L5,19 Z" id="Path-95" fill="#000000" fill-rule="nonzero"></path>
+								        <rect id="Rectangle-62-Copy-4" fill="#000000" opacity="0.3" x="17" y="11" width="3" height="6" rx="1.5"></rect>
+								    </g>
+								</svg></span><span class="kt-menu__link-text">Finance</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
+										<ul class="kt-menu__subnav">
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
+										</ul>
+									</div>
+								</li>
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
 								        <path d="M3.00065168,20.1992055 C3.38825852,15.4265159 7.26191235,13 11.9833413,13 C16.7712164,13 20.7048837,15.2931929 20.9979143,20.2 C21.0095879,20.3954741 20.9979143,21 20.2466999,21 C16.541124,21 11.0347247,21 3.72750223,21 C3.47671215,21 2.97953825,20.45918 3.00065168,20.1992055 Z" id="Mask-Copy" fill="#000000" fill-rule="nonzero"/>
@@ -180,16 +177,12 @@ License: You must have a valid license purchased only from themeforest(the above
 							</ul>
 						</div>
 					</div>
-
 					<!-- end:: Aside Menu -->
 				</div>
-
 				<!-- end:: Aside -->
 				<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper" id="kt_wrapper">
-
 					<!-- begin:: Header -->
 					<div id="kt_header" class="kt-header kt-grid__item  kt-header--fixed ">
-
 						<!-- begin:: Header Menu -->
 						<div class="kt-header-menu-wrapper" id="kt_header_menu_wrapper">
 							<div id="kt_header_menu" class="kt-header-menu kt-header-menu-mobile  kt-header-menu--layout-default ">
@@ -200,12 +193,9 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 						</div>
-
 						<!-- end:: Header Menu -->
-
 						<!-- begin:: Header Topbar -->
 						<div class="kt-header__topbar">
-
 							<!--begin: User Bar -->
 							<div class="kt-header__topbar-item kt-header__topbar-item--user">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="0px,0px">
@@ -215,9 +205,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 							</div>
-
 							<!--end: User Bar -->
-
 							<!--begin: Notifications -->
 							<div class="kt-header__topbar-item dropdown">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="30px,0px" aria-expanded="true">
@@ -225,7 +213,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 								<div class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-lg">
 									<form>
-
 										<!--begin: Head -->
 										<div class="kt-head kt-head--skin-dark kt-head--fit-x kt-head--fit-b" style="background-image: url(assets/media/misc/bg-1.jpg); height:90px;">
 											<h3 class="kt-head__title">
@@ -234,7 +221,6 @@ License: You must have a valid license purchased only from themeforest(the above
 												<span class="btn btn-success btn-sm btn-bold btn-font-md">23 new</span>
 											</h3>
 										</div>
-
 										<!--end: Head -->
 										<div class="tab-content">
 											<div class="tab-pane active show" id="topbar_notifications_notifications" role="tabpanel">
@@ -271,9 +257,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</form>
 								</div>
 							</div>
-
 							<!--end: Notifications -->
-
 							<!-- begin: Sign Out -->
 							<div class="kt-header__topbar-item">
 								<div class="kt-header__topbar-wrapper">
@@ -282,13 +266,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 							<!-- end: Sign Out -->
 						</div>
-
 						<!-- end:: Header Topbar -->
 					</div>
-
 					<!-- end:: Header -->
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
-
 						<!-- begin:: Content Head -->
 						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
@@ -308,14 +289,10 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 						</div>
-
 						<!-- end:: Content Head -->
-
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
-
                             <div class="row">
-
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head">
@@ -341,7 +318,6 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 									</div>
 								</div>
-
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
@@ -365,6 +341,12 @@ License: You must have a valid license purchased only from themeforest(the above
 															<div class="row">
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
 																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																</div>
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-brand no-print">Foto</button>
+																</div>
+																<div class="col-12" style="text-align: right;">
+																	<button class="col-5 btn btn-danger no-print" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
 																</div>
 															</div>
 														</div>
@@ -415,12 +397,6 @@ License: You must have a valid license purchased only from themeforest(the above
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
 																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
 																</div>
-																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-brand no-print">Foto</button>
-																</div>
-																<div class="col-12" style="text-align: right;">
-																	<button class="col-5 btn btn-danger no-print" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
-																</div>
 															</div>
 														</div>
 													</div>
@@ -469,9 +445,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 									</div>
 								</div>
-
 							</div>
-
                             <!--begin::Modal-->
                             <div class="modal fade" id="kt_modal_treatment_complaint" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -512,9 +486,17 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group row">
 													<div class="col-8 offset-4">
 														<label class="kt-checkbox">
-															<input type="checkbox" name="complaint_garansi"> Gunakan garansi
+															<input type="checkbox" id="complaint_garansi" name="complaint_garansi"> Gunakan garansi
 															<span></span>
 														</label><br>
+													</div>
+													<div class="col-8 offset-4">
+														<div id="garansi-alert-gagal" class="alert alert-danger garansi-alert" style="display: none" role="alert">
+															<div class="alert-text"> <i class="fa fa-minus-circle"></i> Maaf, Garansi Tidak Berlaku</div>
+														</div>
+														<div id="garansi-alert-berhasil" class="alert alert-success garansi-alert" style="display: none" role="alert">
+															<div class="alert-text"> <i class="fa fa-star"></i> Garansi Berhasil Digunakan</div>
+														</div>
 													</div>
 												</div>
 	                                        </div>
@@ -526,14 +508,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </div>
                                 </div>
                             </div>
-
                             <!--end::Modal-->
-
 						</div>
-
 						<!-- end:: Content -->
 					</div>
-
 					<!-- begin:: Footer -->
 					<div class="kt-footer  kt-grid__item kt-grid kt-grid--desktop kt-grid--ver-desktop" id="kt_footer">
 						<div class="kt-container  kt-container--fluid " style="justify-content: center;">
@@ -542,21 +520,16 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 						</div>
 					</div>
-
 					<!-- end:: Footer -->
 				</div>
 			</div>
 		</div>
-
 		<!-- end:: Page -->
-
 		<!-- begin::Scrolltop -->
 		<div id="kt_scrolltop" class="kt-scrolltop">
 			<i class="fa fa-arrow-up"></i>
 		</div>
-
 		<!-- end::Scrolltop -->
-
 		<!-- begin::Global Config(global config for global JS sciprts) -->
 		<script>
 			var KTAppOptions = {
@@ -588,29 +561,21 @@ License: You must have a valid license purchased only from themeforest(the above
 				}
 			};
 		</script>
-
 		<!-- end::Global Config -->
-
 		<!--begin::Global Theme Bundle(used by all pages) -->
 		<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
-
 		<!--end::Global Theme Bundle -->
-
 		<!--begin::Page Vendors(used by this page) -->
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
-
 		<!--end::Page Vendors -->
-
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_admin.js"></script>
-
 		<script>
 			// Print Function
 			function printFunction() {
 			window.print();
 			}
-
 			// Datepicker
 			var arrows;
 		    if (KTUtil.isRTL()) {
@@ -624,14 +589,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		            rightArrow: '<i class="la la-angle-right"></i>'
 		        }
 		    }
-
 			$('#kt_datepicker_modal_complaint').datepicker({
 			   rtl: KTUtil.isRTL(),
 			   todayHighlight: true,
 			   orientation: "bottom left",
 			   templates: arrows
 		   });
-
 		   // Form Validation
 		   $("#kt_form_complaint").validate({
 			   // define validation rules
@@ -647,7 +610,6 @@ License: You must have a valid license purchased only from themeforest(the above
 					   required: true
 				   }
 			   },
-
 			   invalidHandler: function(event, validator) {
 				   KTUtil.scrollTop();
 			   },
@@ -655,7 +617,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				   //form[0].submit(); // submit the form
 			   }
 		   });
-
 		   //Sweetalert
 		   $('#kt_sweetalert_berhasil_complaint').click(function(e) {
 			   swal.fire({
@@ -666,7 +627,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				   confirmButtonClass: "btn btn-brand"
 			   });
 		   });
-
 		   // Datatable responsiveness x Bootstrap tab bug
 			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
 		        $($.fn.dataTable.tables(true)).DataTable()
@@ -674,9 +634,31 @@ License: You must have a valid license purchased only from themeforest(the above
 		           .responsive.recalc();
 		    });
 		</script>
-
+		<script>
+			/*Random alert untuk garansi*/
+			var gagal = document.getElementById('garansi-alert-gagal');
+			var berhasil = document.getElementById('garansi-alert-berhasil');
+			$(document).ready(function(){
+				$('input[type="checkbox"]').click(function(){
+					if($(this).prop("checked") == true){
+						var num = Math.floor(Math.random() * 2) + 1;
+						if (num == 1) {
+							berhasil.style.display = 'block';
+							gagal.style.display = 'none';
+						}
+						else{
+							berhasil.style.display = 'none';
+							gagal.style.display = 'block';
+						}
+					}
+					else if($(this).prop("checked") == false){
+						berhasil.style.display = 'none';
+						gagal.style.display = 'none';
+					}
+				});
+			});
+		</script>
 		<!--end::Page Scripts -->
 	</body>
-
 	<!-- end::Body -->
 </html>
