--- a/user_superadmin/finance_payroll_detail.html
+++ b/user_superadmin/finance_payroll_detail.html
@@ -182,10 +182,10 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Human Resources</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Karyawan</span></a></li>
+											<li class="kt-menu__item kt-hidden" aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Karyawan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_karyawan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Daftar Karyawan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_request_dayoff.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Day-Off</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_request_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Pinjaman</span></a></li>
+											<li class="kt-menu__item kt-hidden" aria-haspopup="true"><a href="user_superadmin/hr_request_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Pinjaman</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -203,7 +203,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Keuangan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Pinjaman</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pinjaman</span></a></li>
 											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/finance_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Payroll</span></a></li>
 										</ul>
 									</div>
@@ -437,6 +437,19 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input type="file" class="custom-file-input request_required" name="payroll_payroll_bukti" accept="image/*">
 															<label class="custom-file-label">Choose file</label>
 														</div>
+													</div>
+												</div>
+												<div class="form-group form-group-last row">
+													<label class="col-sm-3 col-form-label">Jenis Pembayaran :</label>
+													<div class="col-sm-9">
+														<select id="jenis_pembayaran" class="custom-select form-control">
+															<option selected="">-Pilih Jenis Pembayaran-</option>
+															<option value="cash">Cash</option>
+															<option value="edc mandiri">EDC Mandiri</option>
+															<option value="edc bni">EDC BNI</option>
+															<option value="transfer mandiri">Transfer Mandiri</option>
+															<option value="transfer bni">Transfer BNI</option>
+														</select>
 													</div>
 												</div>
 	                                            <div style="text-align: center; margin-top: 20px">
