Revision - tambahkan button "Tolak" disamping submit

--- a/user_gudang/request_stock_detail_request.html
+++ b/user_gudang/request_stock_detail_request.html
@@ -372,6 +372,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<textarea class="form-control" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
 												</div>
 	                                            <div style="text-align: center; margin-top: 30px">
+	                                            	<button type="submit" class="btn btn-secondary" id="kt_sweetalert_request_ditolak">Tolak</button>
 	                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_request_berhasil">Submit</button>
 	                                            </div>
 											</form>
