Hilangkan tabel active treatment status ongoing di user therapist

--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -361,7 +361,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
 									<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
 								</div>
-								<table class="table table-bordered table-hover table-checkable" id="table_spk_ongoing"></table>
+								<table class="table table-bordered table-hover table-checkable kt-hidden" id="table_spk_ongoing"></table>
 								<div class="row" style="margin-top:60px;">
 									<div class="col-sm-6 margin-mobile-b-20" style="padding-right:0px;">
 										<table class="col-sm-12" style="bottom: 0px; position: absolute;">
