Halaman Print Invoice

--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -395,7 +395,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														<div class="col-6">
 															<div class="row">
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																	<a target="_blank" class="col-5 btn btn-warning no-print" href="user_admin/print_invoice.html">Print</a>
 																</div>
 															</div>
 														</div>
