--- a/user_admin/print_invoice.html
+++ b/user_admin/print_invoice.html
@@ -146,7 +146,7 @@
 						<h4 id="alamatPenerima" name="alamatPenerima">Jln. Tun Abdul Razak Ruko Walk J10 Citra Land Gowa</h4>
 						<h4 id="noTelpon" name="noTelpon">081231234123</h4>
 					</div>
-					<div class="col-4">
+					<div class="offset-1 col-4">
 						<h4 class="head-pengirim">From</h4>
 						<h4 id="namaPenerima" name="namaPenerima">Darnilia</h4>
 						<h4 id="alamatPenerima" name="alamatPenerima">Jln. Tun Abdul Razak Ruko Walk J10 Citra Land Gowa</h4>
